# kinkaku

./: AUTHORS  LICENSE  Makefile.am  Makefile.in  README.md  config.guess  config.sub  configure  configure.ac  depcomp  kinkaku.pc.in  missing
data/: Makefile.in
src/: Makefile.in
src/api/: Makefile.am  Makefile.in  api-example.cpp
src/include/: Makefile.am  Makefile.in
src/include/kinkaku/: config.h  config.h.in  corpus-io-eda.h  corpus-io-full.h  corpus-io-part.h  corpus-io-prob.h  corpus-io-raw.h  corpus-io-tokenized.h  corpus-io.h  dictionary.h  feature-io.h  feature-lookup.h  feature-vector.h  general-io.h  kinkaku-config.h  kinkaku-lm.h  kinkaku-model.h  kinkaku-string.h  kinkaku-struct.h  kinkaku-util.h  kinkaku.h  model-io-binary.h  model-io-text.h  model-io.h  string-util-map-euc.h  string-util-map-sjis.h  string-util-map-utf8.h  string-util.h
src/lib/: Makefile.am  Makefile.in  corpus-io-eda.cpp  corpus-io-full.cpp  corpus-io-part.cpp  corpus-io-prob.cpp  corpus-io-raw.cpp  corpus-io-tokenized.cpp  corpus-io.cpp  dictionary.cpp  feature-io.cpp  feature-lookup.cpp  general-io.cpp  kinkaku-config.cpp  kinkaku-lm.cpp  kinkaku-model.cpp  kinkaku-string.cpp  kinkaku-struct.cpp  kinkaku-util.cpp  kinkaku.cpp  model-io.cpp  string-util.cpp
src/lib/liblinear/: Makefile.in
src/lib/liblinear/blas/: Makefile.in
src/test/: Makefile.am  Makefile.in  test-analysis.h  test-base.h  test-corpusio-euc.h  test-corpusio-sjis.h  test-corpusio.h  test-kinkaku.cpp  test-kinkaku.h  test-sentence.h
tools/: pos2eng.pl
