nobase_include_HEADERS = kinkaku/config.h \
	kinkaku/corpus-io.h \
	kinkaku/corpus-io-eda.h \
	kinkaku/corpus-io-full.h \
	kinkaku/corpus-io-part.h \
	kinkaku/corpus-io-prob.h \
	kinkaku/corpus-io-raw.h \
	kinkaku/corpus-io-tokenized.h \
	kinkaku/dictionary.h \
	kinkaku/feature-io.h \
	kinkaku/feature-lookup.h \
	kinkaku/feature-vector.h \
	kinkaku/general-io.h \
	kinkaku/kinkaku-config.h \
	kinkaku/kinkaku.h \
	kinkaku/kinkaku-lm.h \
	kinkaku/kinkaku-model.h \
	kinkaku/kinkaku-string.h \
	kinkaku/kinkaku-struct.h \
	kinkaku/kinkaku-util.h \
	kinkaku/model-io.h \
	kinkaku/model-io-binary.h \
	kinkaku/model-io-text.h \
	kinkaku/string-util.h \
	kinkaku/string-util-map-euc.h \
	kinkaku/string-util-map-sjis.h \
	kinkaku/string-util-map-utf8.h
